# mission-control

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md  docker-compose.sqlite.yml  docker-compose.yml  install.sh  plan.md  setup.sh
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: config.py  main.py
backend/app/agents/: skill_loader.py
backend/app/api/: ab_testing.py  agent_analytics.py  agent_budget.py  agent_marketplace.py  agent_memory.py  agent_versions.py  agents.py  api_keys.py  approvals.py  autotag.py  backup.py  brand.py  dedup.py  email_ingest.py  export.py  github_integration.py  goals.py  habits.py  health.py  ideas.py  journal.py  linear_integration.py  marketing_content.py  marketing_signals.py  marketing_stats.py  notes.py  notifications.py  notion_integration.py  pipeline_builder.py  plugins.py  projects.py  push.py  rate_limit.py  reading.py  routines.py  rss_feeds.py  search.py  smart_priority.py  tasks.py  todoist_integration.py  (+7 more)
backend/app/db/: __init__.py  context.py  models.py  seed.py  session.py
backend/app/integrations/: chat.py  commands.py  voice.py  (+5 more)
backend/skills/: _template.yaml  code-reviewer.yaml  content-drafter.yaml  daily-checkin.yaml  daily-standup.yaml  evening-reflection.yaml  feedback-collector.yaml  goal-decomposer.yaml  health-checkin.yaml  idea-validator.yaml  learning-path.yaml  opportunity-scout.yaml  reddit-scout.yaml  web-researcher.yaml  weekly-prioritizer.yaml  weekly-review.yaml
backend/tests/: conftest.py  test_api.py
sdk/python/: pyproject.toml
(+69 files in other folders)
