[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mission-control-sdk"
version = "0.1.0"
description = "Python SDK for the Mission Control API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "respx>=0.21",
]

[project.urls]
Homepage = "https://github.com/mission-control/mission-control"
Documentation = "https://github.com/mission-control/mission-control/tree/main/sdk/python"
